# simple-endian-rs

./: .gitignore  BRANCH_MIGRATION.md  Cargo.toml  LICENSE  LLMs.txt  PERFORMANCE.md  README.md  WIRE_STRUCT_TRIAGE.md  llms.md  migrate-to-main.sh  test_issues  test_wire_io
.github/: FUNDING.yml
.github/workflows/: ci.yml  create-main-branch.yml
benches/: benches.rs
examples/: simple_endian_usage.rs
examples/cpu_emulator/: main.rs
examples/derive_protocol/: main.rs
examples/endian_values/: main.rs
examples/enum_protocol/: main.rs
examples/ethernet_inspector/: main.rs
examples/explicit_struct_endian/: main.rs
examples/fat16_driver/: driver.rs  main.rs
examples/messaging_app/: README.md  protocol.rs
examples/messaging_client/: main.rs
examples/messaging_server/: main.rs
examples/simple_endian_usage/: main.rs
examples/text_ops_usage/: main.rs
simple_endian_derive/: Cargo.toml  README.md
simple_endian_derive/src/: endianize.rs  lib.rs
src/: bitwise_ops.rs  comparison_ops.rs  formatting_ops.rs  io.rs  lib.rs  math_ops.rs  neg_ops.rs  shift_ops.rs  shorthand_types.rs  shorthand_types_nonzero.rs  simple_endian.rs  specific_endian.rs
src/text_ops/: encoding_rs.rs  mod.rs  utf16.rs  utf32.rs  utf8.rs
src/text_ops/fixed/: mod.rs  utf16.rs  utf32.rs  utf8.rs
tests/: derive_byte_array_passthrough.rs  derive_default_passthrough.rs  derive_endian_array.rs  derive_endianize.rs  derive_enum_io_roundtrip.rs  derive_enum_tuple_text.rs  derive_io_roundtrip.rs  derive_io_roundtrip_text_utf8.rs  derive_io_wire_auto_impl.rs  derive_repr_c.rs  derive_repr_packed.rs  derive_repr_packed_size.rs  derive_text_padding.rs  derive_text_padding_utf32.rs  derive_text_padding_utf8.rs  derive_tuple_struct_support.rs  derive_union_no_io.rs  derive_wire_derive_passthrough.rs  derive_wire_naming_edge_cases.rs  fixed_text_padding_semantics.rs  fixed_text_wire_endian_bytes.rs  io_dyn_ext_traits.rs  layout_padding_wrappers.rs  native_io_helpers.rs  no_std_compatibility.rs  nonzero.rs  simple_specific_endian_bridge.rs  specific_endian_tuple_wrappers.rs  text_encoding_rs.rs  text_utf8_fixed.rs  wrapping.rs
