[package]
name = "simple_endian"
version = "0.3.2"
authors = ["Erica Stith <rexlunae@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A create for defining endianness within your data structures, to make handling portable data structures simpler."
repository = "https://github.com/rexlunae/simple-endian-rs"
keywords = ["endian", "byteorder", "big-endian", "little-endian", "data-structures"]
documentation = "https://docs.rs/simple_endian/"
homepage = "https://github.com/rexlunae/simple-endian-rs"
readme = "README.md"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
memmap = "0.7"
bencher = "0.1.5"

[features]
default = ["bitwise", "comparisons", "format", "math_ops",
    "neg_ops", "shift_ops", "both_endian", "float_impls", "integer_impls", "byte_impls",
    "non_zero_impls"]
bitwise = ["integer_impls"]
comparisons = []
format = []
math_ops= []
neg_ops = []
shift_ops = []
big_endian = []
little_endian = []
both_endian = ["big_endian", "little_endian"]
float_impls = ["integer_impls"]
integer_impls = []
byte_impls = []
non_zero_impls = ["integer_impls"]
