[package]
name = "simple_endian"
version = "0.4.10"
authors = ["Erica Stith <rexlunae@gmail.com>"]
edition = "2024"
license = "MIT"
description = "A create for defining endianness within your data structures, to make handling portable data structures simpler."
repository = "https://github.com/rexlunae/simple-endian-rs"
keywords = ["endian", "byteorder", "big-endian", "little-endian", "data-structures"]
documentation = "https://docs.rs/simple_endian/"
homepage = "https://github.com/rexlunae/simple-endian-rs"
readme = "README.md"

[workspace]
members = ["simple_endian_derive"]

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
memmap = "0.7"
bencher = "0.1.5"

[dependencies]
simple_endian_derive = { version = "0.4.10", path = "./simple_endian_derive", optional = true }
encoding_rs = { version = "0.8", default-features = false, optional = true }


[features]
default = ["bitwise", "comparisons", "format", "math_ops",
    "neg_ops", "shift_ops", "both_endian", "float_impls", "integer_impls", "byte_impls",
    "simple_bool", "simple_byte_impls"]

# Enable proc-macro derives (adds syn/quote via the proc-macro crate).
derive = ["dep:simple_endian_derive"]
bitwise = ["integer_impls"]
comparisons = []
format = []
math_ops= []
neg_ops = []
shift_ops = []
big_endian = []
little_endian = []
both_endian = ["big_endian", "little_endian"]
float_impls = ["integer_impls"]
integer_impls = []
nonzero = ["integer_impls"]
wrapping = ["integer_impls"]
byte_impls = []
simple_bool = []
simple_byte_impls = []
simple_char_impls = []
simple_string_impls = []
simple_all = ["simple_bool", "simple_byte_impls", "simple_char_impls", "simple_string_impls"]
simple_specific_endian_bridge = []
text_utf16 = []
text_utf8 = []
text_utf32 = []
text_fixed = []
text_all = ["text_utf8", "text_utf16", "text_utf32", "text_fixed"]
text_encoding_rs = ["dep:encoding_rs"]
io-core = []
io-std = ["io-core"]
io = ["io-std"]

[package.metadata.docs.rs]
# Build docs.rs with all feature-gated APIs enabled so the rendered documentation
# includes text helpers, IO helpers, and the derive-related exports.
all-features = true
# Also show "This item is only available when..." annotations in rustdoc.
rustdoc-args = ["--cfg", "docsrs"]
